<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:contentDescription="@string/logo"
        android:src="@drawable/mf_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_family"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@id/image_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Family of Mf" />

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="@id/text_family"
        app:layout_constraintTop_toBottomOf="@id/text_family"
        tools:text="Name of Mf" />

    <TextView
        android:id="@+id/text_risk"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="@id/text_family"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        tools:text="Risk Associated" />

    <TextView
        android:id="@+id/text_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/nav"
        app:layout_constraintStart_toStartOf="@id/text_family"
        app:layout_constraintTop_toBottomOf="@id/text_risk" />

    <TextView
        android:id="@+id/text_navValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@id/text_nav"
        app:layout_constraintTop_toBottomOf="@id/text_risk"
        tools:text="25" />

    <TextView
        android:id="@+id/text_returns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/_1_year_returns"
        app:layout_constraintStart_toStartOf="@id/text_family"
        app:layout_constraintTop_toBottomOf="@id/text_nav" />

    <TextView
        android:id="@+id/text_returnValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@id/text_returns"
        app:layout_constraintTop_toBottomOf="@id/text_nav"
        tools:text="25%" />

    <TextView
        android:id="@+id/text_minAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/min_amount"
        app:layout_constraintStart_toStartOf="@id/text_family"
        app:layout_constraintTop_toBottomOf="@id/text_returns" />

    <TextView
        android:id="@+id/text_minValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@id/text_returns"
        app:layout_constraintTop_toBottomOf="@id/text_returns"
        tools:text="5000" />

    <Button
        android:id="@+id/button_invest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/invest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_minAmount" />

    <View
        app:layout_constraintTop_toBottomOf="@id/button_invest"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>